test/fixtures/syntax-errors/missing-bracket.tcl
# This file has missing close bracket
proc testMissingBracket {value} {
  set result [expr {$value * 2}
  return $result
# Missing bracket causes error here
